[package]
name = "biheap"
version = "0.3.2" 
edition = "2021"
description = "A binary heap that supports efficient removal of extremet  elements."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features] 
threadsafe = [] 
# default = ["threadsafe"] 