[package]
name = "biheap"
version = "0.4.2" 
edition = "2021"
description = "A heap group that supports efficient removal of extreme elements."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features] 
threadsafe = []